/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package k8s.io.api.admissionregistration.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "k8s.io/api/admissionregistration/v1alpha1";

// MatchResources decides whether to run the admission control policy on an object based
// on whether meet the match criteria.
message MatchResources {
  // Namespaces specifies the namespaces which the admission control policy should validate on.
  // +optional
  repeated string namespaces = 1;

  // ExcludeNamespaces specifies the namespaces which the validating admission policy should not validate on.
  // +optional
  repeated string excludeNamespaces = 2;

  // NamespaceSelector decides whether to run the admission control policy on an object based
  // on whether the namespace for that object matches the selector. If the
  // object itself is a namespace, the matching is performed on
  // object.metadata.labels. If the object is another cluster scoped resource,
  // it never skips the admission control policy.
  //
  // See
  // https://kubernetes.io/docs/concepts/overview/working-with-objects/labels
  // for examples of label selectors.
  //
  // Default to the empty LabelSelector, which matches everything.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector namespaceSelector = 3;

  // LabelSelector decides the match criteria on resource based on its labels.
  // See
  // https://kubernetes.io/docs/concepts/overview/working-with-objects/labels
  // for examples of label selectors.
  //
  // Default to the empty LabelSelector, which matches everything.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector labelSelector = 4;

  // ResourceRules describes what operations on what resources/subresources the ValidatingAdmissionPolicy matches.
  // +optional
  repeated RuleWithOperations resourceRules = 5;

  // ExcludeResourceRules describes what operations on what resources/subresources the ValidatingAdmissionPolicy should not care about.
  // +optional
  repeated RuleWithOperations excludeResourceRules = 6;

  // ResourceName specifies the resource name which the admission control policy should validate on.
  // +optional
  repeated string resourceName = 7;

  // ExcludeResourceName specifies the resource name which the admission control policy should not validate on.
  // +optional
  repeated string excludeResourceName = 8;

  // matchPolicy defines how the "MatchResources" list is used to match incoming requests.
  // Allowed values are "Exact" or "Equivalent".
  //
  // - Exact: match a request only if it exactly matches a specified rule.
  // For example, if deployments can be modified via apps/v1, apps/v1beta1, and extensions/v1beta1,
  // but "rules" only included `apiGroups:["apps"], apiVersions:["v1"], resources: ["deployments"]`,
  // a request to apps/v1beta1 or extensions/v1beta1 would not be sent to the ValidatingAdmissionPolicy.
  //
  // - Equivalent: match a request if modifies a resource listed in rules, even via another API group or version.
  // For example, if deployments can be modified via apps/v1, apps/v1beta1, and extensions/v1beta1,
  // and "rules" only included `apiGroups:["apps"], apiVersions:["v1"], resources: ["deployments"]`,
  // a request to apps/v1beta1 or extensions/v1beta1 would be converted to apps/v1 and sent to the ValidatingAdmissionPolicy.
  //
  // Defaults to "Equivalent"
  // +optional
  optional string matchPolicy = 9;
}

// ParamSource is a tuple of Group Kind and Version.
message ParamSource {
  // APIGroup is the API group the resources belong to.
  // Required.
  optional string apiGroup = 1;

  // APIVersion is the API version the resources belong to.
  // Required.
  optional string apiVersion = 2;

  // APIKind is the API kind the resources belong to.
  // Required.
  optional string apiKind = 3;
}

// PolicyBinding binds the ValidatingAdmissionPolicy with paramerized resources.
// PolicyBinding and parameter CRDs together define how cluster administrators configure policies for clusters.
message PolicyBinding {
  // Standard object metadata; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Specification of the desired behavior of the AdmissionPolicy.
  // +optional
  optional PolicyBindingSpec spec = 2;
}

// PolicyBindingList is a list of PolicyBinding.
message PolicyBindingList {
  // Standard list metadata.
  // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // List of PolicyBinding.
  repeated PolicyBinding items = 2;
}

// PolicyBindingSpec is the specification of the PolicyBinding.
message PolicyBindingSpec {
  // Policy references a ValidatingAdmissionPolicy which the policyBinding binds to.
  // Required.
  optional string policy = 1;

  // Param specifies the parameter resource used to configure the admission control policy.
  // It should point to a Customer Resource which is created out of the CRD specified in ParamSource of ValidatingAdmissionPolicy it binded.
  // +optional
  optional string param = 2;

  // MatchResources describe a list of match options which could be used to filter the resources.
  // +optional
  optional MatchResources matchResources = 3;
}

// Rule is a tuple of APIGroups, APIVersion, and Resources.It is recommended
// to make sure that all the tuple expansions are valid.
message Rule {
  // APIGroups is the API groups the resources belong to. '*' is all groups.
  // If '*' is present, the length of the slice must be one.
  // Required.
  repeated string apiGroups = 1;

  // APIVersions is the API versions the resources belong to. '*' is all versions.
  // If '*' is present, the length of the slice must be one.
  // Required.
  repeated string apiVersions = 2;

  // Resources is a list of resources this rule applies to.
  //
  // For example:
  // 'pods' means pods.
  // 'pods/log' means the log subresource of pods.
  // '*' means all resources, but not subresources.
  // 'pods/*' means all subresources of pods.
  // '*/scale' means all scale subresources.
  // '*/*' means all resources and their subresources.
  //
  // If wildcard is present, the validation rule will ensure resources do not
  // overlap with each other.
  //
  // Depending on the enclosing object, subresources might not be allowed.
  // Required.
  repeated string resources = 3;

  // scope specifies the scope of this rule.
  // Valid values are "Cluster", "Namespaced", and "*"
  // "Cluster" means that only cluster-scoped resources will match this rule.
  // Namespace API objects are cluster-scoped.
  // "Namespaced" means that only namespaced resources will match this rule.
  // "*" means that there are no scope restrictions.
  // Subresources match the scope of their parent resource.
  // Default is "*".
  //
  // +optional
  optional string scope = 4;
}

// RuleWithOperations is a tuple of Operations and Resources. It is recommended to make
// sure that all the tuple expansions are valid.
message RuleWithOperations {
  // Operations is the operations the admission hook cares about - CREATE, UPDATE, DELETE, CONNECT or *
  // for all of those operations and any future admission operations that are added.
  // If '*' is present, the length of the slice must be one.
  // Required.
  repeated string operations = 1;

  // Rule is embedded, it describes other criteria of the rule, like
  // APIGroups, APIVersions, Resources, etc.
  optional Rule rule = 2;
}

// ValidatingAdmissionPolicy describes the definition of an admission validation policy that accepts or rejects and object without changing it.
message ValidatingAdmissionPolicy {
  // Standard object metadata; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Specification of the desired behavior of the AdmissionPolicy.
  // +optional
  optional ValidatingAdmissionPolicySpec spec = 2;
}

// ValidatingAdmissionPolicyList is a list of ValidatingAdmissionPolicy.
message ValidatingAdmissionPolicyList {
  // Standard list metadata.
  // More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // List of ValidatingAdmissionPolicy.
  repeated ValidatingAdmissionPolicy items = 2;
}

// ValidatingAdmissionPolicySpec is the specification of the desired behavior of the AdmissionPolicy.
message ValidatingAdmissionPolicySpec {
  // ParamSource specifies the kind of resources used to parameterize this policy which has to be a CRD.
  // +optional
  optional ParamSource paramSource = 1;

  // MatchConstraints specifies what resources this policy is designed to validate.
  // The AdmissionPolicy cares about a validation if it matches _any_ Constriant.
  // However, in order to prevent clusters from being put into a unustable state that cannot be recoverd from via the API
  // alidatingAdmissionPolicy cannot match ValidatingAdmissionPolicy/PolicyBinding/param resources.
  // ValidatingWebhookConfiguration cannot match MutatingWebhookConfiguration or ValidatingAdmissionPolicy/PolicyBinding/param resources.
  // +optional
  optional MatchResources matchConstraints = 2;

  // Validations contain CEL expressions which is used to apply the validation.
  // Required.
  repeated Validation validations = 3;

  // FailurePolicy defines how unrecognized errors from the admission endpoint are handled -
  // allowed values are Ignore or Fail. Defaults to Fail.
  // +optional
  optional string failurePolicy = 4;
}

// Validation specified the CEL expression which is used to apply the validation.
message Validation {
  // The name of the validation rule.
  // Required.
  optional string name = 1;

  // Expression represents the expression which will be evaluated by CEL.
  // ref: https://github.com/google/cel-spec
  // CEL expressions have access to the contents of the AdmissionReview type, organized into CEL variables as well as some other useful variables:
  //
  // 'object'
  // 'oldObject'
  // 'review'
  // 'requestResource' (GVR)
  // 'resource' (GVR)
  // 'name'
  // 'namespace'
  // 'operation'
  // 'userInfo'
  // 'dryRun'
  // 'options'
  // 'config' - configuration data of the policy configuration being validated
  // The `object` variable in the expression is bound to the resource this policy is designed to validate.
  //
  // The `apiVersion`, `kind`, `metadata.name` and `metadata.generateName` are always accessible from the root of the
  // object. No other metadata properties are accessible.
  //
  // Only property names of the form `[a-zA-Z_.-/][a-zA-Z0-9_.-/]*` are accessible.
  // Accessible property names are escaped according to the following rules when accessed in the expression:
  // - '__' escapes to '__underscores__'
  // - '.' escapes to '__dot__'
  // - '-' escapes to '__dash__'
  // - '/' escapes to '__slash__'
  // - Property names that exactly match a CEL RESERVED keyword escape to '__{keyword}__'. The keywords are:
  // 	  "true", "false", "null", "in", "as", "break", "const", "continue", "else", "for", "function", "if",
  // 	  "import", "let", "loop", "package", "namespace", "return".
  // Examples:
  //   - Expression accessing a property named "namespace": {"Expression": "object.__namespace__ > 0"}
  //   - Expression accessing a property named "x-prop": {"Expression": "object.x__dash__prop > 0"}
  //   - Expression accessing a property named "redact__d": {"Expression": "object.redact__underscores__d > 0"}
  //
  // Equality on arrays with list type of 'set' or 'map' ignores element order, i.e. [1, 2] == [2, 1].
  // Concatenation on arrays with x-kubernetes-list-type use the semantics of the list type:
  //   - 'set': `X + Y` performs a union where the array positions of all elements in `X` are preserved and
  //     non-intersecting elements in `Y` are appended, retaining their partial order.
  //   - 'map': `X + Y` performs a merge where the array positions of all keys in `X` are preserved but the values
  //     are overwritten by values in `Y` when the key sets of `X` and `Y` intersect. Elements in `Y` with
  //     non-intersecting keys are appended, retaining their partial order.
  // Required.
  optional string Expression = 2;

  // Message represents the message displayed when validation fails. The message is required if the Expression contains
  // line breaks. The message must not contain line breaks.
  // If unset, the message is "failed rule: {Rule}".
  // e.g. "must be a URL with the host matching spec.host"
  // If ExpressMessage is specified, Message will be ignored
  // If the Expression contains line breaks. Eith Message or ExpressMessage is required.
  // The message must not contain line breaks.
  // If unset, the message is "failed Expression: {Expression}".
  // +optional
  optional string message = 3;

  // If the MessageExpression evaluates to an error, the Message field is used to provide the message.
  // The MessageExpression retured when failed the validation of specified.
  // If MessageExpression is specified, Message will be ignored
  // If the Expression contains line breaks. Either Message or MessageExpression is required.
  // The MessageExpression must not contain line breaks.
  // +optional
  optional string expressMessage = 4;

  // Reason returned when failed the validation.
  // +optional
  optional string reason = 5;

  // Code returned when failed the validation.
  optional string code = 6;
}

